# goit-pythonweb-10

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  main.py  practice_app.py  practice_auth.py  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
alembic/: env.py
alembic/versions/: 2740d371a1af_added_users_table_and_relation_to_.py  9b22c857a776_init_contacts.py  c8d93ab3e553_add_role_to_users.py
docs/source/: conf.py  index.rst  modules.rst
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py  redis.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  hash.py  users.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_users_repository_unit.py
