[project]
name = "restapi-application"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksym Kryvenko",email = "maks1997ym@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic[email] (>=2.13.3,<3.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "bcrypt",
    "python-jose[cryptography]",
    "fastapi-mail",
    "cloudinary",
    "redis",
    "libgravatar",
    "python-multipart",
    "slowapi ; python_version >= '3.14' and python_version < '4.0'"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
